--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-rxjs/core": "^0.9.6",
+    "@react-rxjs/utils": "^0.9.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +18,7 @@
     "react-fast-marquee": "^1.3.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
+    "rxjs": "^7.5.5",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
